// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`messages - calculate diff when new messages 1`] = `
Immutable.List [
  Immutable.ReceivedMessage {
    "id": 3,
    "type": 1,
    "sender": Immutable.MessageSender {
      "replyTo": "",
      "username": "",
    },
    "createdAt": 1551942228,
    "message": "This is a message with id 3",
    "spent": "0.32",
    "isUnregistered": false,
    "tag": "",
    "offerOwner": "",
  },
  Immutable.ReceivedMessage {
    "id": 4,
    "type": 1,
    "sender": Immutable.MessageSender {
      "replyTo": "",
      "username": "",
    },
    "createdAt": 1551935028,
    "message": "This is a message with id 4",
    "spent": "0.32",
    "isUnregistered": false,
    "tag": "",
    "offerOwner": "",
  },
]
`;

exports[`messages - calculate diff when new messages but some were already seen 1`] = `
Immutable.List [
  Immutable.ReceivedMessage {
    "id": 3,
    "type": 1,
    "sender": Immutable.MessageSender {
      "replyTo": "",
      "username": "",
    },
    "createdAt": 1551942228,
    "message": "This is a message with id 3",
    "spent": "0.32",
    "isUnregistered": false,
    "tag": "",
    "offerOwner": "",
  },
]
`;

exports[`messages - calculate diff when no new messages 1`] = `Immutable.List []`;

exports[`messages - calculate diff when no previous messages 1`] = `
Immutable.List [
  Immutable.ReceivedMessage {
    "id": 0,
    "type": 1,
    "sender": Immutable.MessageSender {
      "replyTo": "",
      "username": "",
    },
    "createdAt": 1551963828,
    "message": "This is a message with id 0",
    "spent": "0.32",
    "isUnregistered": false,
    "tag": "",
    "offerOwner": "",
  },
  Immutable.ReceivedMessage {
    "id": 1,
    "type": 1,
    "sender": Immutable.MessageSender {
      "replyTo": "",
      "username": "",
    },
    "createdAt": 1551956628,
    "message": "This is a message with id 1",
    "spent": "0.32",
    "isUnregistered": false,
    "tag": "",
    "offerOwner": "",
  },
  Immutable.ReceivedMessage {
    "id": 2,
    "type": 1,
    "sender": Immutable.MessageSender {
      "replyTo": "",
      "username": "",
    },
    "createdAt": 1551949428,
    "message": "This is a message with id 2",
    "spent": "0.32",
    "isUnregistered": false,
    "tag": "",
    "offerOwner": "",
  },
  Immutable.ReceivedMessage {
    "id": 3,
    "type": 1,
    "sender": Immutable.MessageSender {
      "replyTo": "",
      "username": "",
    },
    "createdAt": 1551942228,
    "message": "This is a message with id 3",
    "spent": "0.32",
    "isUnregistered": false,
    "tag": "",
    "offerOwner": "",
  },
  Immutable.ReceivedMessage {
    "id": 4,
    "type": 1,
    "sender": Immutable.MessageSender {
      "replyTo": "",
      "username": "",
    },
    "createdAt": 1551935028,
    "message": "This is a message with id 4",
    "spent": "0.32",
    "isUnregistered": false,
    "tag": "",
    "offerOwner": "",
  },
]
`;

exports[`messages - calculate diff when some messages disappeared 1`] = `Immutable.List []`;

exports[`messages - message to transfer creates transfer from simple message 1`] = `
Object {
  "createdAt": 1551963828,
  "message": "This is some message [object Object]",
  "r": 0,
  "signature": Object {
    "data": Array [
      17,
      116,
      88,
      4,
      205,
      222,
      65,
      200,
      41,
      213,
      3,
      252,
      207,
      224,
      58,
      26,
      115,
      21,
      124,
      249,
      216,
      123,
      92,
      97,
      172,
      26,
      55,
      101,
      137,
      213,
      58,
      78,
      119,
      8,
      105,
      34,
      110,
      171,
      245,
      178,
      25,
      137,
      46,
      221,
      104,
      230,
      39,
      122,
      209,
      152,
      198,
      59,
      136,
      6,
      240,
      147,
      181,
      34,
      119,
      74,
      223,
      208,
      105,
      253,
    ],
    "type": "Buffer",
  },
  "type": 1,
}
`;

exports[`messages - transfer to message when memo isn't compressed string 1`] = `Array []`;

exports[`messages - transfer to message when on testnet 1`] = `
Object {
  "createdAt": 1551963828,
  "id": "test-id",
  "isUnregistered": false,
  "message": "This is some message test-id",
  "r": 0,
  "sender": Object {
    "replyTo": "",
    "username": "Unnamed",
  },
  "signature": Object {
    "data": Array [
      49,
      88,
      30,
      181,
      22,
      162,
      239,
      5,
      100,
      105,
      9,
      40,
      84,
      168,
      207,
      131,
      178,
      179,
      37,
      106,
      151,
      200,
      29,
      35,
      10,
      61,
      90,
      210,
      57,
      237,
      65,
      55,
      38,
      15,
      161,
      254,
      160,
      9,
      234,
      231,
      14,
      9,
      42,
      163,
      172,
      104,
      213,
      103,
      103,
      187,
      195,
      145,
      34,
      34,
      59,
      239,
      185,
      110,
      231,
      249,
      29,
      75,
      156,
      41,
    ],
    "type": "Buffer",
  },
  "spent": "234.56",
  "type": 1,
}
`;
